# assumls

./: .pre-commit-config.yaml  AGENTS.md  ASSUM.md  CHANGELOG.md  Cargo.toml  README.md  codebase_index.md
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
src/: ASSUM.md  index.rs  lib.rs  lint.rs  lsp.rs  main.rs  model.rs  parser.rs
test_data/cli_duplicate/: ASSUM.md  main.rs
test_data/cli_invalid/: ASSUM.md  main.rs
test_data/cli_invalid/services/api/: ASSUM.md  handler.py  router.ts
test_data/cli_invalid/web/: ASSUM.md  app.js
test_data/cli_valid/: ASSUM.md  main.rs
test_data/cli_valid/services/api/: ASSUM.md  handler.py  router.ts
test_data/cli_valid/web/: ASSUM.md  app.js
test_data/inheritance_test/: ASSUM.md  root.rs
test_data/inheritance_test/subdir/: ASSUM.md  file.rs
test_data/lsp_ws/: ASSUM.md  main.rs
test_data/lsp_ws/services/api/: ASSUM.md  handler.py  router.ts
test_data/lsp_ws/web/: ASSUM.md  app.js
test_data/rename_test/: ASSUM.md  main.rs
test_data/rename_test/subdir/: ASSUM.md  file1.rs
test_data/rg_empty_test/: ASSUM.md
tests/: ASSUM.md  check_cli.rs  lsp_e2e.rs  rename_bug_test.rs  rg_exit_code_test.rs  scope_inheritance_test.rs  unicode_offset_test.rs
tests/common/: lsp_client.rs
tests/snapshots/: check_cli__check_duplicate_def.snap  check_cli__check_missing_def.snap  check_cli__check_missing_tools.snap  check_cli__check_ok.snap  lsp_e2e__lsp_hover_rename_completion.snap
