[package]
name = "assumls"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "io-std", "io-util", "process"] }
tokio_gen_server = "0.5.0"
tower-lsp = "0.20.0"
anyhow = "1.0.93"
serde_json = "1.0.133"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tempfile = "3.13.0"
insta = { version = "1.40.0", features = ["json"] }
