[package]
name = "assumls"
version = "0.0.3"
edition = "2024"
description = "Language server and CLI checker for enforcing documented assumptions across a codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SichangHe/assumls"
keywords = ["lsp", "language-server", "assumptions", "documentation", "linter"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt", "io-std"] }
tokio_gen_server = "0.5.1"
tower-lsp = "0.20.0"
anyhow = "1.0.93"
serde_json = "1.0.133"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.16"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt",
    "io-std",
    "io-util",
    "process",
] }
insta = { version = "1.40.0", features = ["json"] }

[profile.release]
lto = true
panic = "abort"
strip = true
